static/stylesheets/base.css
/* ... */
.header button:hover {
    background-color: #FFE641;
    box-shadow: -3px 3px 40px rgba(32, 32, 32, 0.15);
    color: rgba(37, 37, 37, 0.63);
    cursor: pointer;
    transition: all 0.2s;
}

.header p {
    margin: 0;
    padding: 0;
}

.header-condensed {
    height: 60px !important;
    transition: height 0.4s;
}

#eventInfo {
    padding-left: 50px;
    text-align: left;
    width: 300px;
}

.header-condensed #eventInfo {
    padding-left: 25px;
    transition: padding-left 0.4s;
}

#eventInfo * {
    margin: 0;
    padding: 0;
}

#logo {
    height: 100%;
    width: 120px;
    text-align: center;
}

#logoM {
    height: 90px;
    margin: 0 auto;
    vertical-align: middle;
}

#logoText {
    height: 30px;
    display: block;
    margin: 0 auto;
}

#logo a {
    background-color: rgba(0,0,0,0);
    box-shadow: 0 0 0 0 #000000;

    padding: 0 0;
    margin: 0 0 0 0;
}

#headerButtons {
    padding-right: 50px;
    text-align: center;
    width: 300px;
    display: flex;
    align-items: center;
    justify-content: flex-end;
}

.header-condensed #headerButtons, .header-condensed #headerDropdown {
    padding-right: 25px;
    transition: padding-right 0.4s;
}

#headerDropdown {
    display: none;
    position: relative;
    width: 300px;
    padding-right: 50px;
    text-align: right;
}

#dropdownContent {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    position: fixed;
    text-align: center;

    height: 120px;
    width: 160px;
    top: 120px;
    right: 0;

    border-left: 1px solid rgba(20, 20, 20, 0.1);
    border-right: 1px solid rgba(20, 20, 20, 0.1);
    border-bottom: 1px solid rgba(20, 20, 20, 0.1);
}

#dropdownContent a {
    margin: 2px 0;
}

.header-condensed #dropdownContent {
    top: 60px !important;
    transition: top 0.4s;
}

#dropdownTrigger {
    color: rgba(255, 255, 255, 0.8);
}

#dropdownTrigger:hover{
    cursor: pointer;
    color: #FFE641;
}

/* --- Non-Tiled Section --- */

.more-info {
    display: flex;
    flex-direction: column;
    justify-content: center;
    background-color: #e6f3f7;
    color: rgba(37, 37, 37, 0.63);
    padding: 40px 5% 70px;
}

.faq-row {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    margin-bottom: 15px;
}

.faq-item {
    width: 30%;
    margin: 10px 3% 10px 0;
    transition: all 0.2s;
}

.faq-item .question {
    font-family: 'Ubuntu';
    color: rgba(0, 169, 194, 1);
    font-size: 14pt;
}

.faq-item .question:hover {
    cursor: pointer;
    color: rgba(15, 59, 127, 1);
}

.faq-item .question:before {
    font-family: FontAwesome;
    content: "\f055";
    font-size: 12pt;
    padding-right: 5px;
}

.faq-item .question.open:before {
    content: "\f056";
}

.faq-item .answer {
    display: none;
    font-family: 'Ubuntu';
    color: rgba(37, 37, 37, 0.63);
    font-size: 12pt;
    padding-left: calc(14pt + 5px);
}

.big-tile {
    background-color: white;
    box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.35);
    padding: 30px;
    margin-bottom: 10px;

    align-self: stretch;
    display:flex;
    flex-direction:column;
    justify-content: center;
}

.quote {
    font-size: 14pt;
    margin: 0;
    padding: 0;
}

.quote:before, .quote:after {
    color: rgba(0, 169, 194, 0.9);
    content: '"';
    font-size: 14pt;
}

.source {
    color: #40A1DA;
    font-size: 14pt;
    font-style: italic;
    text-align: right;
    margin: 10px 0 0 0;
    padding: 0;
}

.sponsors-image {
    max-width: 100%;
    max-height: 300px;
}

.logo-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin-bottom: 40px;
    padding: 40px;
    text-align: center;
}

.logo-container .logo-row {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-around;
    align-items: center;
    width: 100%;
    padding: 10px 20px;
}

.logo-row div {
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 20px 0;
}

.logo-row.small div {
    width: 20%;
}
.logo-row.small a {
    max-width: 175px;
}
.logo-row.small img {
    max-height: 80px;
    max-width: 175px;
}

.logo-row.medium div {
    width: 33%;
}
.logo-row.medium a {
    max-width: 275px;
}
.logo-row.medium img {
    max-height: 175px;
    max-width: 275px;
}

.logo-row.large div {
    width: 50%;
}
.logo-row.large a {
    max-width: 350px;
}
.logo-row.large img {
    max-height: 300px;
    max-width: 350px;
}

.basic-info h1 {
    /* Style as h2 */
    font-family: 'Ubuntu';
    font-size: 14pt;
    text-shadow: 0px 0px 50px rgba(0, 0, 0, 0.3);
    letter-spacing: 0.4px;
    font-weight: bolder;
    color: white;
    padding: 0;
    margin-top: 0;
    transition: 0.2s;
}

.basic-info {
    visibility: visible;
    transition: all 0.2s;
}

.extra-info {
    display: none;
    visibility: hidden;
    transition: all 0.2s;
}

.grid-item-expand h2 {
    color: #0093B1;
    padding: 15px 0 0 0;
}

.grid-item-expand .grid-item-content {
    width: 480px;
    height: 360px;
    background: #e6f3f7;
    color: rgba(37, 37, 37, 0.63);
    box-shadow: -3px 3px 40px rgba(32, 32, 32, 0.15);
    overflow-x: hidden;
    overflow-y: auto;
    transition: all 0.2s;
}

.grid-item-expand .basic-info h1 {
    /* Back to h1 styling */
    font-family: 'Ubuntu';
    font-size: 18pt;
    font-weight: bold;
    color: #0093B1;
    padding: 0;
    margin: 18px 4%;
    transition: all 0.2s;
}

.grid-item-expand.expand-small .grid-item-content {
    width: 480px;
    height: 360px;
}

.grid-item-expand.expand-medium .grid-item-content {
    width: 640px;
    height: 480px;
}

.grid-item-expand[data-expandable='1'] .expand-icon:before {
    font-family: FontAwesome;
    content: "\f056";
    color: #0093B1;
    position:absolute;
    right: 0;
    transition: all 0.2s;
    height: 16px;
    width: 16px;
    margin: 10px 20px;
}
/* ... */

